// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileCompany - Add 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompany__clients-filter"
  >
    <input
      name="all"
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      name="active"
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      name="blocked"
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="MobileCompany__table"
  >
    <table>
      <caption />
      <thead>
        <tr>
          <td>
            Фамилия
          </td>
          <td>
            Имя
          </td>
          <td>
            Отчество
          </td>
          <td>
            Баланс
          </td>
          <td>
            Статус
          </td>
          <td>
            Редактировать
          </td>
          <td>
            Удалить
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            test1Иванов
          </td>
          <td
            className="MobileClient__im"
          >
            Иван
          </td>
          <td
            className="MobileClient__otch"
          >
            Иванович
          </td>
          <td
            className="MobileClient__balance"
          >
            200
          </td>
          <td
            className="MobileClient__active"
          >
            active
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            test2Сидоров
          </td>
          <td
            className="MobileClient__im"
          >
            Сидор
          </td>
          <td
            className="MobileClient__otch"
          >
            Сидорович
          </td>
          <td
            className="MobileClient__balance"
          >
            250
          </td>
          <td
            className="MobileClient__active"
          >
            active
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            test3Петров
          </td>
          <td
            className="MobileClient__im"
          >
            Пётр
          </td>
          <td
            className="MobileClient__otch"
          >
            Петрович
          </td>
          <td
            className="MobileClient__balance"
          >
            180
          </td>
          <td
            className="MobileClient__active"
          >
            active
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            test4Григорьев
          </td>
          <td
            className="MobileClient__im"
          >
            Григорий
          </td>
          <td
            className="MobileClient__otch"
          >
            Григорьевич
          </td>
          <td
            className="MobileClient__balance"
          >
            0
          </td>
          <td
            className="MobileClient__blocked"
          >
            blocked
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="MobileCompany__add-button"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;

exports[`MobileCompany - Add 2`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompany__clients-filter"
  >
    <input
      name="all"
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      name="active"
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      name="blocked"
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div
    className="MobileCompany__table"
  >
    <table>
      <caption />
      <thead>
        <tr>
          <td>
            Фамилия
          </td>
          <td>
            Имя
          </td>
          <td>
            Отчество
          </td>
          <td>
            Баланс
          </td>
          <td>
            Статус
          </td>
          <td>
            Редактировать
          </td>
          <td>
            Удалить
          </td>
        </tr>
      </thead>
      <tbody>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            test1Иванов
          </td>
          <td
            className="MobileClient__im"
          >
            Иван
          </td>
          <td
            className="MobileClient__otch"
          >
            Иванович
          </td>
          <td
            className="MobileClient__balance"
          >
            200
          </td>
          <td
            className="MobileClient__active"
          >
            active
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            test2Сидоров
          </td>
          <td
            className="MobileClient__im"
          >
            Сидор
          </td>
          <td
            className="MobileClient__otch"
          >
            Сидорович
          </td>
          <td
            className="MobileClient__balance"
          >
            250
          </td>
          <td
            className="MobileClient__active"
          >
            active
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            test3Петров
          </td>
          <td
            className="MobileClient__im"
          >
            Пётр
          </td>
          <td
            className="MobileClient__otch"
          >
            Петрович
          </td>
          <td
            className="MobileClient__balance"
          >
            180
          </td>
          <td
            className="MobileClient__active"
          >
            active
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            test4Григорьев
          </td>
          <td
            className="MobileClient__im"
          >
            Григорий
          </td>
          <td
            className="MobileClient__otch"
          >
            Григорьевич
          </td>
          <td
            className="MobileClient__balance"
          >
            0
          </td>
          <td
            className="MobileClient__blocked"
          >
            blocked
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td
            className="MobileClient__fam"
          >
            addedClient
          </td>
          <td
            className="MobileClient__im"
          >
            addedIm
          </td>
          <td
            className="MobileClient__otch"
          >
            addedOtch
          </td>
          <td
            className="MobileClient__balance"
          >
            111
          </td>
          <td
            className="MobileClient__active"
          >
            active
          </td>
          <td>
            <input
              name="edit-button"
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              name="delete-button"
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="MobileCompany__add-button"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Добавить клиента"
    />
  </div>
</div>
`;
